ai-descriptor-derive/tests/ui/compile_fail/item_features_non_optional_with_default.stderr
error: The `feature_if_none` attribute is only applicable to Option types
  --> tests/ui/compile_fail/item_features_non_optional_with_default.rs:10:5
   |
10 | /     #[ai(feature_if_none = "This should not be used and should cause an error.")]
11 | |     effect: PotionEffect,
   | |________________________^
